--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -351,10 +351,83 @@ form fieldset {
 
   /*TOURS CSS*/
 
+.tourshead {
+    text-align: center;
+    background-color: lightgrey;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.cozumelhistory h3 {
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+.cozumelhistory p {
+    font-size: 17px;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.cozumelhistory h4 {
+    font-size: 20px;
+    text-decoration: underline;
+}
+
+.aboveisland {
+    border-radius: 4px;
+    border: solid 5px var(--primary-color);
+}
+
+.cozumelhistory {
+    text-align: center;
+}
+
 .websites {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    background-color: var(--accent1-color);
+    padding-top: 80px;
+    border-radius: 10px;
+}
+
+.websites p {
+    color: white;
+}
+
+.firsttour h4 {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.firsttour h4:hover {
+    background-color: var(--background-color);
+    padding: 10px;
+}
+
+.secondtour h4 {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.secondtour h4:hover {
+    background-color: var(--background-color);
+    padding: 10px;
+}
+
+.thirdtour h4 {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.thirdtour h4:hover {
+    background-color: var(--background-color);
+    padding: 10px;
 }
 
 .websites .firsttour {
@@ -362,6 +435,7 @@ form fieldset {
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
+    padding-bottom: 50px;
 }
 
 .websites .secondtour {
@@ -379,18 +453,106 @@ form fieldset {
 }
 
 .tours-1 {
-    float: right;
-    border-radius: 10px;
+    float: left;
+    padding-left: 170px;
 }
 
 .tours-2 {
-    float: left;
-    border-radius: 10px;
+    float: right;
+    padding-right: 170px;
   }
 
 .tours-3 {
-    float: right;
-    border-radius: 10px;
+    float: left;
+    padding-left: 170px;
   }
 
+.text1 {
+    float: right;
+    width: 580px;
+    text-align: center;
+    padding-right: 190px;
+    padding-top: 50px;
+}
 
+.text2 {
+    float: left;
+    width: 580px;
+    text-align: center;
+    padding-left: 160px;
+    padding-top: 50px;
+}
+
+.text3 {
+    float: right;
+    width: 580px;
+    text-align: center;
+    padding-right: 190px;
+    padding-top: 30px;
+}
+
+/*CONTACT CSS*/
+
+.rentalinfo {
+    text-align: center;
+}
+
+
+
+.contactinfo {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.info {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.info h2 {
+    text-decoration: underline;
+    text-align: center;
+}
+
+.info p {
+    text-align: center;
+}
+
+.map1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+}
+
+.map2 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+}
+
+.reservehead {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    text-align: center;
+    padding-left: 20px;
+    text-decoration: underline;
+}
+
+.contactform {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+}
+
+.location1 {
+    width: auto;
+}
+
+.location2 {
+    width: auto;
+}
